--- a/index.html
+++ b/index.html
@@ -69,9 +69,9 @@
             <li>The sweet hotel room
         </ol>
         <h3 class="text">More beautiful pictures</h3>
-        <img src="https://www.kasandbox.org/programming-images/landscapes/beach-waves-at-sunset.png" >
-        <img src="https://www.kasandbox.org/programming-images/landscapes/beach-sunset.png">
-        <img src="https://www.kasandbox.org/programming-images/landscapes/beach-with-palm-trees.png">
+       <p> <img src="https://www.kasandbox.org/programming-images/landscapes/beach-waves-at-sunset.png" > </p>
+        <p><img src="https://www.kasandbox.org/programming-images/landscapes/beach-sunset.png"></p>
+        <p><img src="https://www.kasandbox.org/programming-images/landscapes/beach-with-palm-trees.png"></p>
     </body>
     
 </html>
